added ; and changed id to class

--- a/index.html
+++ b/index.html
@@ -23,33 +23,33 @@
     <div class="brin3"><q><i>Too many rules stifle innovation.</i></q></div>
     <br>
     <div class="brin"><b><ins>Timeline</ins></b></div>
-    <img src="./Images/moscow.jpg" id="moscow" alt="moscow">
+    <img src="./Images/moscow.jpg" class="moscow" alt="moscow">
     <br>
     <br>
     <div class="brin4"><b><i>1973:</i> Brin was born on August 21, 1973, in Moscow in the Soviet Union. He attended school at Paint Branch Montesorri School  in Adelphi, Maryland, and Eleanor Roosevelt High School, Greenbelt, Maryland. He received further education at home. His father encouraged him to learn mathematics and his family helped him learn Russian.</b></div>
     <br>
     <br>
-    <img src="./Images/stanford.jpg" id="moscow" alt="stanford">
+    <img src="./Images/stanford.jpg" class="moscow" alt="stanford">
     <br>
     <div class="brin4"><b><i>1990-1993:</i> September 1990, Brin enrolled in the University of Maryland. He received his Bachelor of Science from the Department of Computer Science in 1993 with honors in computer science and mathematics. Brin began his graduate study in computer science at Stanford University on a graduate fellowship from the National Science Foundation.</b></div>
     <br>
     <br>
-    <img src="./Images/google.jpg" id="moscow" alt="google">
+    <img src="./Images/google.jpg" class="moscow" alt="google">
     <div class="brin4"><b><i>1996:</i> Page and Brin used the former's basic HTML programming skills to set up a simple search page for users. They also began using computer parts they could find to assemble the necessary computing power to handle searches by multiple users. In August 1996, the initial version of Google, still on the Stanford University website, was made available to Internet users.</b></div>
     <br>
-    <img src="./Images/pcmag.jpg" id="moscow" alt="pcmag" height="90px">
+    <img src="./Images/pcmag.jpg" class="moscow" alt="pcmag" height="90px">
     <br>
     <br>
     <div class="brin4"><b><i>1998:</i> Featured speaker at the World Economic Forum and the Technology, Entertainment and Design Conference. PC Magazine praised Google in the Top 100 Web Sites and Search Engines (1998) and awarded Google the Technical Excellence Award, for Innovation in Web Application Development in 1999.</b></div>
     <br>
     <br>
-    <img src="./Images/mit.jpg" id="moscow" alt="mit">
+    <img src="./Images/mit.jpg" class="moscow" alt="mit">
     <br>
     <br>
     <div class="brin4"><b><i>2002-2003:</i> In 2002, Brin, along with Larry Page, was named the MIT Technology Review TR100, as one of the top 100 innovators in the world under the age of 35. In 2003, both Brin and Page received an honorary MBA from IE Business School "for embodying the entrepreneurial spirit and lending momentum to the creation of new businesses".</b></div>
     <br>
     <br>
-    <img src="./Images/abc.jpg" id="moscow" alt="abc">
+    <img src="./Images/abc.jpg" class="moscow" alt="abc">
     <br>
     <br>
     <div class="brin4"><b><i>2004-2005:</i> In 2004, he and Page were named "Persons of the Week" by ABC World News Tonight. They received the Marconi Foundation Prize, the "Highest Award in Engineering".In January 2005, he was nominated to be one of the World Economic Forum's "Young Global Leaders".</b></div>
@@ -57,12 +57,12 @@
     <br>
     <br>
     <br>
-    <img src="./Images/maryland.png" id="moscow" alt="maryland">
+    <img src="./Images/maryland.png" class="moscow" alt="maryland">
     <br>
     <div class="brin4"><b><i>2007-2008:</i> In May 2007, Brin married biotech analyst and entrepreneur Anne Wojcicki at the Bahamas. In 2008, he made a donation to the University of Maryland School of Medicine, where his mother is being treated. In June 2008, Brin invested $4.5 million in Space Adventures, the Virginia-based space tourism company.</b></div>
     <br>
     <br>
-    <img src="./Images/forbes.jpg" id="moscow" alt="forbes">
+    <img src="./Images/forbes.jpg" class="moscow" alt="forbes">
     <br>
     <br>
     <br>
