added a link to my other website

--- a/index.html
+++ b/index.html
@@ -19,10 +19,14 @@
         <th>Internet Entrepreneur</th>
       </tr>
     </table>
+    <hr>
     <br>
     <div class="brin3"><q><i>Too many rules stifle innovation.</i></q></div>
     <br>
     <div class="brin"><b><ins>Timeline</ins></b></div>
+    <br>
+    <div class="link"><a style="color:aqua;" href="https://Assignment3.sophiasamera.repl.co"><b>Photo Gallery</b></a>
+    </div>
     <img src="./Images/moscow.jpg" class="moscow" alt="moscow">
     <br>
     <br>
